# browser_use_api

./: browser_app.py  main.py  pyproject.toml  test.py
util/: oci_openai_client.py  openai_client.py
util/browser/: browser_agent.py  browser_tools.py
util/config/: config.yaml
util/langchain/: chat.py
